--- a/subprojects/infrastructure/kafka/src/main/resources/application.yml
+++ b/subprojects/infrastructure/kafka/src/main/resources/application.yml
@@ -1,8 +1,6 @@
 spring:
   profiles:
-    active: ${SPRING_PROFILES_ACTIVE:kafka}
-    include:
-      - boot3
+    active: ${SPRING_PROFILES_ACTIVE:boot3}
 
 server:
   port: 8080
